[tool.poetry]
name = "driver-buddy-iac-build-agent"
version = "1.0.0"
description = "Build agent for Driver Buddy IaC"
readme = "README.md"
authors = ["Lee Myring <mail@thinkstack.io>"]

[tool.poetry.dependencies]
boto3 = "*"
python = "^3.8"
python-terraform = "^0.10.1"
pyyaml = "*"
safety = "*"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
